--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,10 @@
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "leantony/laravel_modal": "dev-master",
-        "pusher/pusher-php-server": "^2.6",
-        "vinkla/pusher": "^2.5",
         "watson/bootstrap-form": "^1.1",
         "webpatser/laravel-uuid": "^2.0",
-        "ext-gd": "*"
+        "ext-gd": "*",
+        "get-stream/stream-laravel": "~2.2.6"
     },
 
 
