Market Place Sign ups

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "leantony/laravel_modal": "dev-master",
         "pusher/pusher-php-server": "^2.6",
         "watson/bootstrap-form": "^1.1",
-        "webpatser/laravel-uuid": "^2.0"
+        "webpatser/laravel-uuid": "^2.0",
+        "get-stream/stream": "^2.2"
     },
 
 
