--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "~1.0",
         "lavary/laravel-menu": "^1.6",
         "leantony/laravel_modal": "dev-master",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^2.6",
         "watson/bootstrap-form": "^1.1",
         "webpatser/laravel-uuid": "^2.0"
