--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "lavary/laravel-menu": "^1.6",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "leantony/laravel_modal": "dev-master",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^2.6",
