--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "gloudemans/shoppingcart": "^2.3",
         "intervention/image": "^2.3",
         "intervention/imagecache": "^2.3",
+        "intouch/laravel-newrelic": "~2.0",
         "jeremykenedy/laravel-users": "^1.0",
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.0",
