--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "dependencies": {
     "laravel-echo": "^1.3.0",
     "pusher-js": "^4.0.0"
-  }
+  },
+  "name": "shopaholicks",
+  "description": "<p align=\"center\"><img src=\"https://laravel.com/assets/img/components/logo-laravel.svg\"></p>",
+  "version": "1.0.0",
+  "main": "node_app.js",
+  "directories": {
+    "test": "tests"
+  },
+  "author": "Frederick Ankamah",
+  "license": "ISC"
 }
